[package]
name = "noah-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio-tungstenite = "0.20"
tungstenite = "0.20"
thiserror = "1.0"
url = "2.5"
rand = "0.8"
chrono = "0.4"
